# tasks

./: .gitignore
.github/workflows/: api.yml  ui.yml
services/tasks_api/: LICENSE  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
services/tasks_api/resources/: cognito.yml
services/tasks_api/src/tasks_api/: __init__.py  config.py  main.py  models.py  schemas.py  store.py
services/tasks_api/tests/: test_api.py
services/tasks_ui/: index.html  package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: App.vue  aws-exports.js  main.js
