[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tasks_api"
authors = [{name = "Anders Bogsnes", email = "anders.bogsnes@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "Task API"
