[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tasks_api"
authors = [{ name = "Anders Bogsnes", email = "anders.bogsnes@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "Task API"

dependencies = ["fastapi", "uvicorn[standard]", "httpx", "mangum", "boto3"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "ruff",
    "bandit",
    "moto",
    "boto3-stubs[dynamodb]"
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "build",
    "dist",
    "venv",
]
src = ["src"]

select = [
    "E",
    "F",
    "UP",
    "PL",
    "RUF"
]